[package]
name = "clyde-proxy"
version = "0.1.0"
edition = "2021"
authors = ["oSumAtrIX <johan.melkonyan1@web.de>"]

[dependencies]
poise = "0.5.5"
tracing = "0.1.23"
tracing-subscriber = "0.3.16"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
env_logger = "0.10.0"