[package]
name = "clyde-proxy"
version = "0.1.0"
edition = "2021"
authors = ["oSumAtrIX <johan.melkonyan1@web.de>"]

[dependencies]
poise = { git = "https://github.com/Sideral-Tech/poise" }
tracing = "0.1.23"
tracing-subscriber = "0.3.16"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
env_logger = "0.10.0"

[profile.release]
strip=true
opt-level = "z"
lto = true